# quote_monitor

./: .gitignore  README.md  pyproject.toml
app/: main.py  models.py  routes.py
app/core/: base.py  config.py  db.py
app/migrations/: env.py
app/migrations/versions/: 460bddad6bd3_init.py
